# bulk-downloader-for-reddit

./: .gitignore  .gitmodules  Dockerfile  README.md  _config.yml  default_config.cfg  docker-compose.yml  pytest.ini  requirements.txt  script.py  setup.cfg  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  site-support-request.md
bdfr/: __main__.py  archiver.py  cloner.py  configuration.py  connector.py  default_config.cfg  download_filter.py  downloader.py  file_name_formatter.py  oauth2.py  resource.py
bulkredditdownloader/: __main__.py  archive_entry.py  archiver.py  arguments.py  authenticator.py  config.py  configuration.py  default_config.cfg  download_filter.py  downloader.py  errors.py  exceptions.py  file_name_formatter.py  json_helper.py  oauth2.py  parser.py  program_mode.py  reddit.py  resource.py  searcher.py  site_authenticator.py  store.py  utils.py
devscripts/: configure.ps1  configure.sh
docs/: ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMAND_LINE_ARGUMENTS.md  COMPILE_FROM_SOURCE.md  CONTRIBUTING.md  FAQ.md  INTERPRET_FROM_SOURCE.md  help_page.md
scripts/: README.md  extract_failed_ids.sh  extract_successful_ids.sh  print_summary.sh
src/: arguments.py  config.py  downloader.py  errors.py  jsonHelper.py  parser.py  programMode.py  reddit.py  searcher.py  store.py  tools.py  utils.py
tests/: conftest.py  test_archiver.py  test_configuration.py  test_connector.py  test_download_filter.py  test_downloader.py  test_file_name_formatter.py  test_integration.py  test_oauth2.py
(+143 files in other folders)
